--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,16 @@
+
+* {
+	padding:0;
+	margin: 0;
+	box-sizing: border-box;
+}
 body {
+	height: 41rem;
     background-color: rgb(105, 0, 105);
     color: white;
     font-family: "Courier New", monospace;
     font-weight: bold;
-	margin: 0;
+	margin: auto;
 	padding: 0;
     text-align:center
 }
@@ -21,7 +28,7 @@ h1 {
 	align-items: center;
 	flex-direction: column;
 }
-.score-area {
+.score-panel {
 	display: inline-block;
     margin: 0;
 	padding: 0;
