Tied the code , Add some comments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,15 +21,16 @@ h1 {
     padding-top: 5rem;
     font-size: 2em;
     box-sizing: inherit;
-    text-align:center
-
+    text-align:center;
 }
+/* Set the container of the deck */
 .container {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 }
+/* Set the score panel layout */
 .score-panel {
 	display: inline-block;
     margin: 0;
@@ -37,6 +38,7 @@ h1 {
 	display: inline-block;
 	margin: 0 0.3rem 0 0;
 }
+/* Set the restart icon */
 .restart {
 	float: right;
 	cursor: pointer;
@@ -45,6 +47,7 @@ h1 {
 	display: inline-block;
 	margin: 0 1rem;
 }
+/* Set the deck layout */
 .deck {
 	display: flex;
 	flex-wrap: wrap;
@@ -52,6 +55,7 @@ h1 {
 	align-items: center;
 	margin: 3em 3em 3em;
 }
+/* Set the cards color, cursor and alignment  */
 .deck .card {
 	height: 3.7rem;
 	width: 3.7rem;
@@ -88,12 +92,11 @@ h1 {
 	backface-visibility: visible !important;
 	animation-duration: .75s;
 }
+/* Disable the card when choosing another */
 .deck .card.disabled {
 	pointer-events: none;
 	opacity: 0.9;
 }
-
-
 /* Set the game dimensions if the user uses  iPad or similar devices */
 @media (min-width: 768px) {
 	.container {
